fixed some alignment settings within the style.css file

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     background-color: #777;
     width: 960px;
     font-size: 18px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 header{
@@ -10,7 +11,7 @@ header{
     text-align: center;
     line-height: 100px;
     margin-top: 20px;
-    width: 1200px;
+    width: 1193px;
     margin-left: 5px;
 }
 
@@ -18,8 +19,8 @@ nav{
     background: #ebebeb;
     text-align: center;
     line-height: 100px;
-    margin: 20px;   
-    width: 1200px;
+    margin: 13px;   
+    width: 1193px;
     margin-left: 5px;
 }
 
@@ -27,23 +28,24 @@ nav{
 section{
     background: #ebebeb;
     width: 495px;
-    height: 390px;
+    height: 393px;
     text-align: center;
     margin-bottom: 20px;
-    margin-right: 50px;
+    margin-right: 30px;
+    margin-left: 5px;
     float: left;
-    padding: 25px;
+    padding: 30px;
 }
 
 aside{
     background: #ebebeb;
-    width: 500px;
+    width: 567px;
     text-align: center;
     float: left;
-    height: 390px;
+    height: 415px;
     margin-bottom: 20px;
-    margin-left: 50px;
-    padding: 25px;
+    margin-left: 1px;
+    padding: 20px;
 }
 
 .division{
@@ -56,7 +58,7 @@ article{
     background: #777;
     width: 495px;
     height: 195px;
-    margin-top: 60px;
+    margin-top: 65px;
 
 
 }
@@ -68,7 +70,10 @@ h2{
     text-align: center;
     line-height: 50px;
     margin-bottom: 10px;
-
+    width: 450px;
+    margin-left: 20px;
+    font-weight: normal;
+    font-size: small;
 }
 
 
@@ -77,8 +82,12 @@ p{
     background: #ebebeb;
     text-align: center;
     line-height: 40px;
-
+    width: 450px;
+    margin-left: 20px;
+    font-size: small;
 }
+
+
 
 
 .border{
@@ -99,6 +108,6 @@ footer{
     top: 10px;
     line-height: 120px;
     margin: 1;
-    width: 1200px;
+    width: 1199px;
 
 }
